--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -3,9 +3,9 @@ server.port=8080
 spring.application.name=campus-events-api
 
 # Database Configuration
-spring.datasource.url=jdbc:postgresql://localhost:5432/campus_events
-spring.datasource.username=postgres
-spring.datasource.password=1234
+spring.datasource.url=jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}
+spring.datasource.username=${PGUSER}
+spring.datasource.password=${PGPASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA Configuration
@@ -28,4 +28,5 @@ file.upload-dir=uploads/event-images
 file.base-url=http://localhost:8080
 
 # CORS (for React frontend)
-cors.allowed-origins=http://localhost:5173
+cors.allowed-origins=https://campus.events.vercel.app
+
