--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+spring.profiles.active=${SPRING_PROFILES_ACTIVE:dev}
+
 # Server Configuration
 server.port=${PORT:8080}
 spring.application.name=campus-events-api
