update docker fle

--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -7,7 +7,7 @@ spring.application.name=campus-events-api
 # Database Configuration - Railway provides DATABASE_URL
 spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/campus_events}
 spring.datasource.username=${PGUSER:postgres}
-spring.datasource.password=${PGPASSWORD:password}
+spring.datasource.password=${PGPASSWORD:zIsDIQQvkwqhueAVkInnOWIYRjLmnYsG}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA Configuration
