--- a/demo/Dockerfile
+++ b/demo/Dockerfile
@@ -6,26 +6,31 @@ WORKDIR /app
 COPY .mvn .mvn
 COPY mvnw pom.xml ./
 
-# Download dependencies (cached layer)
-RUN chmod +x mvnw && ./mvnw dependency:go-offline -B
+# Make mvnw executable and download dependencies
+RUN chmod +x mvnw && ./mvnw dependency:go-offline -B || true
 
 # Copy source code
 COPY src ./src
 
-# Build the application
-RUN ./mvnw clean package -DskipTests
+# Build with verbose output and skip tests
+RUN ./mvnw clean package -DskipTests -X
 
 # Runtime stage
 FROM eclipse-temurin:17-jre-alpine
 WORKDIR /app
 
-# Copy the built jar
+# Copy the jar file
 COPY --from=build /app/target/*.jar app.jar
+
+# Create upload directory
+RUN mkdir -p /tmp/uploads/event-images
 
 # Expose port
 EXPOSE 8080
 
+# Health check
+HEALTHCHECK --interval=30s --timeout=3s --start-period=60s \
+  CMD wget --no-verbose --tries=1 --spider http://localhost:${PORT:-8080}/api/v1/test || exit 1
+
 # Run the application
-ENTRYPOINT ["sh", "-c", "java -Dserver.port=${PORT:-8080} -Dspring.profiles.active=${SPRING_PROFILES_ACTIVE:-railway} $JAVA_OPTS -jar app.jar"]
-
-
+ENTRYPOINT ["sh", "-c", "java -Dserver.port=${PORT:-8080} -Dspring.profiles.active=${SPRING_PROFILES_ACTIVE:-railway} -Xmx512m -Xms256m $JAVA_OPTS -jar app.jar"]
