--- a/demo/src/main/resources/application-railway.properties
+++ b/demo/src/main/resources/application-railway.properties
@@ -1,6 +1,7 @@
 # Railway Production Configuration
 spring.datasource.url=${DATABASE_URL}
 spring.jpa.show-sql=false
+spring.jpa.hibernate.ddl-auto=update
 logging.level.root=INFO
 logging.level.com.campusevents=INFO
 
