adding logs to docker file

--- a/demo/.dockerignore
+++ b/demo/.dockerignore
@@ -1,12 +1,14 @@
 target/
 !target/*.jar
-.mvn/wrapper/maven-wrapper.jar
 *.class
 *.log
-.git/
-.gitignore
-README.md
-.idea/
+.git
+.idea
 *.iml
 .DS_Store
-uploads/
+node_modules
+uploads
+.env
+.env.*
+*.tmp
+*.swp
