--- a/demo/Dockerfile
+++ b/demo/Dockerfile
@@ -1,36 +1,32 @@
-# Build stage
 FROM maven:3.9-eclipse-temurin-17 AS build
 WORKDIR /app
 
-# Copy Maven wrapper and pom.xml
+# Copy Maven files
 COPY .mvn .mvn
 COPY mvnw pom.xml ./
 
-# Make mvnw executable and download dependencies
-RUN chmod +x mvnw && ./mvnw dependency:go-offline -B || true
+# Download dependencies
+RUN echo "=== Making mvnw executable ===" && \
+    chmod +x mvnw && \
+    echo "=== Downloading dependencies ===" && \
+    ./mvnw dependency:go-offline -B || true && \
+    echo "=== Dependencies downloaded ==="
 
-# Copy source code
+# Copy source - VERBOSE
 COPY src ./src
-
-# Build with verbose output and skip tests
-RUN ./mvnw clean package -DskipTests -X
+RUN echo "=== Source copied successfully ===" && \
+    ls -la src/ && \
+    echo "=== Starting Maven build ===" && \
+    ./mvnw clean package -DskipTests -B -X && \
+    echo "=== Build complete ===" && \
+    ls -la target/
 
 # Runtime stage
 FROM eclipse-temurin:17-jre-alpine
 WORKDIR /app
 
-# Copy the jar file
 COPY --from=build /app/target/*.jar app.jar
-
-# Create upload directory
 RUN mkdir -p /tmp/uploads/event-images
 
-# Expose port
 EXPOSE 8080
-
-# Health check
-HEALTHCHECK --interval=30s --timeout=3s --start-period=60s \
-  CMD wget --no-verbose --tries=1 --spider http://localhost:${PORT:-8080}/api/v1/test || exit 1
-
-# Run the application
-ENTRYPOINT ["sh", "-c", "java -Dserver.port=${PORT:-8080} -Dspring.profiles.active=${SPRING_PROFILES_ACTIVE:-railway} -Xmx512m -Xms256m $JAVA_OPTS -jar app.jar"]
+CMD ["sh", "-c", "java -Dserver.port=${PORT:-8080} -Dspring.profiles.active=railway -jar app.jar"]
