--- a/demo/src/main/resources/application-railway.properties
+++ b/demo/src/main/resources/application-railway.properties
@@ -1,9 +1,23 @@
-# Railway Production Configuration
+# --- Server ---
+server.port=${PORT:8080}
+
+# --- Datasource (Railway Postgres) ---
 spring.datasource.url=${DATABASE_URL}
+spring.datasource.username=${PGUSER}
+spring.datasource.password=${PGPASSWORD}
+
+spring.datasource.hikari.maximum-pool-size=5
+spring.datasource.hikari.connection-timeout=20000
+
+# --- JPA ---
 spring.jpa.show-sql=false
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.open-in-view=false
+spring.jpa.defer-datasource-initialization=true
+
+# --- Logging ---
 logging.level.root=INFO
 logging.level.com.campusevents=INFO
 
-# File storage for Railway (ephemeral)
+# --- File storage (ephemeral) ---
 file.upload-dir=/tmp/uploads/event-images
