Fixing case sensitive file naming issue-2

--- a/demo/Dockerfile
+++ b/demo/Dockerfile
@@ -29,4 +29,5 @@ COPY --from=build /app/target/*.jar app.jar
 RUN mkdir -p /tmp/uploads/event-images
 
 EXPOSE 8080
-CMD ["sh", "-c", "java -Dserver.port=${PORT:-8080} -jar app.jar"]
+#CMD ["sh", "-c", "java -Dserver.port=${PORT:-8080} -jar app.jar"]
+CMD ["sh", "-c", "java -Dserver.port=${PORT:-8080} -Dspring.profiles.active=railway -jar app.jar"]
