--- a/demo/src/main/resources/application-railway.properties
+++ b/demo/src/main/resources/application-railway.properties
@@ -1,8 +1,18 @@
+## Railway Production Configuration
+#spring.datasource.url=${DATABASE_URL}
+#spring.jpa.show-sql=false
+#spring.jpa.hibernate.ddl-auto=update
+#logging.level.root=INFO
+#logging.level.com.campusevents=INFO
+#
+## File storage for Railway (ephemeral)
+#file.upload-dir=/tmp/uploads/event-images
+
 # --- Server ---
 server.port=${PORT:8080}
 
 # --- Datasource (Railway Postgres) ---
-spring.datasource.url=${DATABASE_URL}
+spring.datasource.url=jdbc:postgresql://${PGHOST}:${PGPORT}/${PGDATABASE}
 spring.datasource.username=${PGUSER}
 spring.datasource.password=${PGPASSWORD}
 
