--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -6,7 +6,7 @@ server.port=${PORT:8080}
 spring.application.name=campus-events-api
 
 # Database Configuration - Railway provides DATABASE_URL
-spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/campus_events}
+spring.datasource.url=jdbc:${DATABASE_URL:jdbc:postgresql://localhost:5432/campus_events}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA Configuration
