Fixing case sensitive file naming issue_2

--- a/demo/src/main/resources/application-railway.properties
+++ b/demo/src/main/resources/application-railway.properties
@@ -1,11 +1,13 @@
 # Railway Production Configuration
 spring.datasource.url=jdbc:${DATABASE_URL}
+spring.datasource.driver-class-name=org.postgresql.Driver
 spring.jpa.show-sql=false
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 logging.level.root=INFO
 logging.level.com.campusevents=INFO
 
-# File storage for Railway (ephemeral)
+# File storage
 file.upload-dir=/tmp/uploads/event-images
 
 # --- Server ---
