--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -5,8 +5,10 @@ spring.profiles.active=${SPRING_PROFILES_ACTIVE:dev}
 server.port=${PORT:8080}
 spring.application.name=campus-events-api
 
-# Database Configuration - Railway provides DATABASE_URL
-spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/campus_events}
+# Database - Default for local development
+spring.datasource.url=jdbc:postgresql://localhost:5432/campus_events
+spring.datasource.username=postgres
+spring.datasource.password=password
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA Configuration
@@ -29,13 +31,12 @@ cors.allowed-origins=${CORS_ALLOWED_ORIGINS:http://localhost:5173}
 # File upload configuration
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
-file.upload-dir=${FILE_UPLOAD_DIR:/tmp/uploads/event-images}
+file.upload-dir=${FILE_UPLOAD_DIR:uploads/event-images}
 file.base-url=${APP_URL:http://localhost:8080}
 
 # Logging
 logging.level.root=INFO
 logging.level.com.campusevents=DEBUG
-
 #-------------------------------------------------------------
 ## Server Configuration
 #server.port=8080
