--- a/demo/src/main/resources/application-railway.properties
+++ b/demo/src/main/resources/application-railway.properties
@@ -1,15 +1,20 @@
 # Railway Production Configuration
-spring.datasource.url=jdbc:${DATABASE_URL}
+spring.datasource.url=jdbc:postgresql://${PGHOST:postgres.railway.internal}:${PGPORT:5432}/${PGDATABASE:railway}
+spring.datasource.username=${PGUSER:postgres}
+spring.datasource.password=${PGPASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.show-sql=false
+
+# JPA Configuration
 spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+# Logging
 logging.level.root=INFO
 logging.level.com.campusevents=INFO
 
 # File storage
 file.upload-dir=/tmp/uploads/event-images
-
 # --- Server ---
 #server.port=${PORT:8080}
 #
