--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -6,9 +6,12 @@ server.port=${PORT:8080}
 spring.application.name=campus-events-api
 
 # Database - Default for local development
-spring.datasource.url=jdbc:postgresql://localhost:5432/campus_events
-spring.datasource.username=postgres
-spring.datasource.password=password
+#spring.datasource.url=jdbc:postgresql://localhost:5432/campus_events
+#spring.datasource.username=postgres
+#spring.datasource.password=password
+spring.datasource.url=jdbc:postgresql://${PGHOST:postgres.railway.internal}:${PGPORT:5432}/${PGDATABASE:railway}
+spring.datasource.username=${PGUSER:postgres}
+spring.datasource.password=${PGPASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA Configuration
