Fixing case sensitive file naming issue_4

--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -38,6 +38,8 @@ file.upload-dir=${FILE_UPLOAD_DIR:uploads/event-images}
 file.base-url=${APP_URL:http://localhost:8080}
 
 # Logging
+logging.level.org.hibernate=DEBUG
+logging.level.org.springframework.jdbc=DEBUG
 logging.level.root=INFO
 logging.level.com.campusevents=DEBUG
 #-------------------------------------------------------------
