--- a/demo/src/main/resources/application-railway.properties
+++ b/demo/src/main/resources/application-railway.properties
@@ -10,6 +10,8 @@ spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 # Logging
+logging.level.org.hibernate=DEBUG
+logging.level.org.springframework.jdbc=DEBUG
 logging.level.root=INFO
 logging.level.com.campusevents=INFO
 
