--- a/demo/src/main/resources/application-railway.properties
+++ b/demo/src/main/resources/application-railway.properties
@@ -17,6 +17,8 @@ logging.level.com.campusevents=INFO
 
 # File storage
 file.upload-dir=/tmp/uploads/event-images
+cors.allowed-origins=${CORS_ALLOWED_ORIGINS:http://localhost:5173}
+
 # --- Server ---
 #server.port=${PORT:8080}
 #
