updating ddl-auto-2

--- a/demo/src/main/resources/application-railway.properties
+++ b/demo/src/main/resources/application-railway.properties
@@ -5,10 +5,11 @@ spring.datasource.password=${PGPASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
 
 # JPA Configuration
-spring.jpa.hibernate.ddl-auto=validate
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
+cors.allowed-origins=${CORS_ALLOWED_ORIGINS:http://localhost:5173}
 # Logging
 logging.level.org.hibernate=DEBUG
 logging.level.org.springframework.jdbc=DEBUG
@@ -17,7 +18,6 @@ logging.level.com.campusevents=INFO
 
 # File storage
 file.upload-dir=/tmp/uploads/event-images
-cors.allowed-origins=${CORS_ALLOWED_ORIGINS:http://localhost:5173}
 
 # --- Server ---
 #server.port=${PORT:8080}
