updating ddl-auto-5

--- a/demo/src/main/resources/application.properties
+++ b/demo/src/main/resources/application.properties
@@ -9,7 +9,7 @@ spring.application.name=campus-events-api
 #spring.datasource.url=jdbc:postgresql://localhost:5432/campus_events
 #spring.datasource.username=postgres
 #spring.datasource.password=password
-spring.datasource.url=jdbc:postgresql://${PGHOST:postgres.railway.internal}:${PGPORT:5432}/${PGDATABASE:railway}
+spring.datasource.url=jdbc:${DATABASE_URL}
 spring.datasource.username=${PGUSER:postgres}
 spring.datasource.password=${PGPASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
