updating ddl-auto-4

--- a/demo/src/main/resources/application-railway.properties
+++ b/demo/src/main/resources/application-railway.properties
@@ -1,6 +1,6 @@
 # Railway Production Configuration
-#spring.datasource.url=jdbc:postgresql://${PGHOST:postgres.railway.internal}:${PGPORT:5432}/${PGDATABASE:railway}
-spring.datasource.url=jdbc:${DATABASE_URL}
+spring.datasource.url=jdbc:postgresql://${PGHOST:postgres.railway.internal}:${PGPORT:5432}/${PGDATABASE:railway}
+#spring.datasource.url=jdbc:${DATABASE_URL}
 spring.datasource.username=${PGUSER:postgres}
 spring.datasource.password=${PGPASSWORD}
 spring.datasource.driver-class-name=org.postgresql.Driver
